--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,11 +31,16 @@
             </intent-filter>
         </activity>
 
-        <!-- MainActivity 2nd point -->
         <activity
             android:name=".MainActivity"
             android:exported="false">
         </activity>
+
+        <activity
+            android:name=".ProfileActivity"
+            android:exported="false">
+        </activity>
+
     </application>
 
 </manifest>
